--- a/src/components/table/style.scss
+++ b/src/components/table/style.scss
@@ -12,36 +12,66 @@ html {
   text-align: right;
 
   a {
-    display: -webkit-inline-box;
-    display: -webkit-inline-flex;
-    display: -ms-inline-flexbox;
     display: inline-flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     color: #fff;
     font-size: 20px;
     text-decoration: none;
     width: 214px;
     height: 49px;
-    -webkit-border-radius: 30px;
-            border-radius: 30px;
+    border-radius: 30px;
     background-color: #fe2824;
   }
 }
 
+.legend {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 10px;
+}
+
+.legendItem {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  > div:first-child {
+    margin-right: 6px;
+  }
+}
+
+@media all and (max-width: 800px) {
+  .legend {
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    height: 40px;
+  }
+
+  .legendItem {
+    margin-left: 0;
+  }
+}
+
+.monitoring,
 .identified {
   color: #ff8800;
 }
 
+.dateTooltip {
+  color: #3498DB;
+  font-weight: 700;
+  margin: 3px 0;
+  border: 1px solid;
+  padding: 2px 10px;
+  border-radius: 18px;
+}
+
+.dateTooltipOutdated,
 .major,
 .critical {
-  color: #ff1d02;
+  color: #fff;
+  background-color: #ff1d02;
 }
 
 .minor,
@@ -57,6 +87,21 @@ html {
   font-weight: 700;
 }
 
+.incedent {
+  cursor: pointer;
+  border: 1px solid #fff;
+  box-shadow: 0 0 0 1pt #2ecb65;
+
+  &.activeOutdated {
+    background-color: #2ecb65;
+    box-shadow: 0 0 0 1pt #ff8800;
+  }
+
+  &.activeCurrent {
+    background-color: #fe2824;
+    box-shadow: 0 0 0 1pt #fe2824;
+  }
+}
 
 :local table {
   margin: 0 auto;
@@ -68,8 +113,6 @@ html {
     border: 1px solid #f3f3f3;
 
     tr {
-      background-image: -webkit-linear-gradient(225deg, #ec008c 0%, #ff0000 51%, #ffc20e 100%);
-      background-image: -o-linear-gradient(225deg, #ec008c 0%, #ff0000 51%, #ffc20e 100%);
       background-image: linear-gradient(225deg, #ec008c 0%, #ff0000 51%, #ffc20e 100%);
       height: 60px;
       color: #ffffff;
@@ -80,8 +123,7 @@ html {
 
     td {
       padding: 10px;
-      -webkit-box-sizing: border-box;
-              box-sizing: border-box;
+      box-sizing: border-box;
       border: none;
     }
   }
@@ -103,8 +145,7 @@ html {
   td {
     vertical-align: middle;
     padding: 10px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
   }
 }
 
@@ -125,6 +166,14 @@ html {
   }
 }
 
+@media all and (max-width: 414px) {
+
+  tbody td:nth-child(2),
+  thead td:nth-child(2) {
+      display: none;
+  }
+}
+
 :local .service_name {
   width: 343px;
   vertical-align: middle;
@@ -133,6 +182,15 @@ html {
 :local .service_status {
   text-align: center;
   width: 127px;
+}
+
+.incedent,
+.empty {
+  margin: 0 auto;
+  width: 10px;
+  height: 10px;
+  background-color: #2ecb65;
+  border-radius: 50%;
 }
 
 :local .incedent_elem {
@@ -145,14 +203,8 @@ html {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 
   .incedent_elem_wrap {
     position: relative;
@@ -171,29 +223,6 @@ html {
     }
   }
 
-  .incedent,
-  .empty {
-    margin: 0 auto;
-    width: 10px;
-    height: 10px;
-    background-color: #2ecb65;
-    -webkit-border-radius: 50%;
-            border-radius: 50%;
-  }
-
-  .incedent {
-    cursor: pointer;
-    border: 1px solid #fff;
-    -webkit-box-shadow: 0 0 0 1pt #2ecb65;
-            box-shadow: 0 0 0 1pt #2ecb65;
-
-    &.active {
-      background-color: #ff1d02;
-      -webkit-box-shadow: 0 0 0 1pt #ff1d02;
-              box-shadow: 0 0 0 1pt #ff1d02;
-    }
-  }
-
   &_list {
     display: none;
     position: absolute;
@@ -209,7 +238,6 @@ html {
     font-weight: 500;
     background-color: #fff;
     padding: 10px;
-    -webkit-box-shadow: 0px 0px 22px -1px rgba(0, 0, 0, 0.46);
     box-shadow: 0px 0px 22px -1px rgba(0, 0, 0, 0.46);
 
     li {
@@ -232,6 +260,13 @@ html {
         font-weight: 700;
         display: block;
       }
+
+      .incedentBox {
+        margin: 5px 2px;
+        border: 1px solid;
+        padding: 2px 10px;
+        border-radius: 18px;
+      }
     }
 
     &:after {
@@ -248,7 +283,6 @@ html {
       height: 0;
       border-left: 15px solid transparent;
       border-right: 15px solid transparent;
-
       border-bottom: 15px solid #fff;
     }
   }
