--- a/src/components/table/style.scss
+++ b/src/components/table/style.scss
@@ -29,7 +29,12 @@ html {
   display: flex;
   justify-content: flex-end;
   margin-bottom: 10px;
+  @media all and (max-width: 800px) {
+    display: none;
+  }
 }
+
+
 
 .legendItem {
   display: flex;
