--- a/src/components/table/style.scss
+++ b/src/components/table/style.scss
@@ -198,6 +198,11 @@ html {
   border-radius: 50%;
 }
 
+.empty {
+  width: 6px;
+  height: 6px;
+}
+
 :local .incedent_elem {
   position: relative;
   width: 15px;
